welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
if (estSurBiscuit() == false) {
for (i <- 1 to 6) {
	avance()
}
}
}